sandc/test/fixtures/astRegression/shouldFail/productions/literalExpression/IllegalArrayDefaultValue.sand
pub class IllegalArrayDefaultValue {
    foo() {
        [static "foo"; n]
    }
}